load("//tools:defs.bzl", "builder")

#package(default_visibility = ["//builders/gcf/ruby26/acceptance:__pkg__"])

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
#       "//cmd/utils/archive_source:archive_source.tgz",
#        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/utils/label:label.tgz",
        ],
    groups = {
        "ruby": [
            "//cmd/ruby/bundle:bundle.tgz",
            "//cmd/ruby/functions_framework:functions_framework.tgz",
        ],
    },


#    buildpacks = [
#        "//cmd/ruby/functions_framework:functions_framework.tgz",
#        "//cmd/ruby/bundle:bundle.tgz",
#        "//cmd/utils/archive_source:archive_source.tgz",
#        "//cmd/utils/label:label.tgz",
#    ],

    image = "penghuima/ruby26",
    visibility = [
            "//builders/ruby26/acceptance:__pkg__",
        ],
)
